formatting xml and nulling the color of output

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
+    "xml-beautify": "^1.2.3",
     "xml-formatter": "^3.6.5"
   },
   "scripts": {
